--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ server.port=8081
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=cdy
+spring.datasource.password=1234
+
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.mybatis_psql_board.dto
+
+file.upload.directory = C:/Users/BNet/Desktop/mybatis_psql_board/src/main/webapp/WEB-INF/uploadFiles/
